// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asyncAll.njk 1`] = `
====================================options=====================================
parsers: ["nunjucks"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>Foo</div>

{% asyncAll item in items %}
<div></div> {% endall %}

{% asyncAll key, value in items %}
  <div></div> {% endall %}

{% asyncAll item in items %} <div><span>Foo</span></div> {% endall %}

{% asyncAll item in items %}{% set bar = "true" %}{% endall %}

<div {% asyncAll item in items %}class="attribute"{% endall %}></div>

<div
{% asyncAll item in items %}
class="attribute"
{% endall %}></div>

<div>

{% asyncAll item in items %}<div>bar</div>{% else %}<div>foo</div>{% endall %}
</div>

{% asyncAll item in items %}
{% asyncAll item2 in items2 %}
{% endall %}
{% endall %}

{% asyncAll item in items %}
<div>{{ item }}</div>
{% else %}
{% asyncAll item2 in items2 %}
{% endall %}
{% endall %}

=====================================output=====================================
<div>Foo</div>

{% asyncAll item in items %}
  <div></div>
{% endall %}

{% asyncAll key, value in items %}
  <div></div>
{% endall %}

{% asyncAll item in items %}
  <div><span>Foo</span></div>
{% endall %}

{% asyncAll item in items %}
  {% set bar = "true" %}
{% endall %}

<div
  {% asyncAll item in items %}
    class="attribute"
  {% endall %}
></div>

<div
  {% asyncAll item in items %}
    class="attribute"
  {% endall %}
></div>

<div>
  {% asyncAll item in items %}
    <div>bar</div>
  {% else %}
    <div>foo</div>
  {% endall %}
</div>

{% asyncAll item in items %}
  {% asyncAll item2 in items2 %} {% endall %}
{% endall %}

{% asyncAll item in items %}
  <div>{{ item }}</div>
{% else %}
  {% asyncAll item2 in items2 %} {% endall %}
{% endall %}

================================================================================
`;

exports[`asyncEach.njk 1`] = `
====================================options=====================================
parsers: ["nunjucks"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>Foo</div>

{% asyncEach item in items %}
<div></div> {% endeach %}

{% asyncEach key, value in items %}
  <div></div> {% endeach %}

{% asyncEach item in items %} <div><span>Foo</span></div> {% endeach %}

{% asyncEach item in items %}{% set bar = "true" %}{% endeach %}

<div {% asyncEach item in items %}class="attribute"{% endeach %}></div>

<div
{% asyncEach item in items %}
class="attribute"
{% endeach %}></div>

<div>

{% asyncEach item in items %}<div>bar</div>{% else %}<div>foo</div>{% endeach %}
</div>

{% asyncEach item in items %}
{% asyncEach item2 in items2 %}
{% endeach %}
{% endeach %}

{% asyncEach item in items %}
<div>{{ item }}</div>
{% else %}
{% asyncEach item2 in items2 %}
{% endeach %}
{% endeach %}

=====================================output=====================================
<div>Foo</div>

{% asyncEach item in items %}
  <div></div>
{% endeach %}

{% asyncEach key, value in items %}
  <div></div>
{% endeach %}

{% asyncEach item in items %}
  <div><span>Foo</span></div>
{% endeach %}

{% asyncEach item in items %}
  {% set bar = "true" %}
{% endeach %}

<div
  {% asyncEach item in items %}
    class="attribute"
  {% endeach %}
></div>

<div
  {% asyncEach item in items %}
    class="attribute"
  {% endeach %}
></div>

<div>
  {% asyncEach item in items %}
    <div>bar</div>
  {% else %}
    <div>foo</div>
  {% endeach %}
</div>

{% asyncEach item in items %}
  {% asyncEach item2 in items2 %} {% endeach %}
{% endeach %}

{% asyncEach item in items %}
  <div>{{ item }}</div>
{% else %}
  {% asyncEach item2 in items2 %} {% endeach %}
{% endeach %}

================================================================================
`;

exports[`for.njk 1`] = `
====================================options=====================================
parsers: ["nunjucks"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>Foo</div>

{% for item in items %}
<div></div> {% endfor %}

{% for key, value in items %}
  <div></div> {% endfor %}

{% for item in items %} <div><span>Foo</span></div> {% endfor %}

{% for item in items %}{% set bar = "true" %}{% endfor %}

<div {% for item in items %}class="attribute"{% endfor %}></div>

<div
{% for item in items %}
class="attribute"
{% endfor %}></div>

<div>

{% for item in items %}<div>bar</div>{% else %}<div>foo</div>{% endfor %}
</div>

{% for item in items %}
{% for item2 in items2 %}
{% endfor %}
{% endfor %}

{% for item in items %}
<div>{{ item }}</div>
{% else %}
{% for item2 in items2 %}
{% endfor %}
{% endfor %}

=====================================output=====================================
<div>Foo</div>

{% for item in items %}
  <div></div>
{% endfor %}

{% for key, value in items %}
  <div></div>
{% endfor %}

{% for item in items %}
  <div><span>Foo</span></div>
{% endfor %}

{% for item in items %}
  {% set bar = "true" %}
{% endfor %}

<div
  {% for item in items %}
    class="attribute"
  {% endfor %}
></div>

<div
  {% for item in items %}
    class="attribute"
  {% endfor %}
></div>

<div>
  {% for item in items %}
    <div>bar</div>
  {% else %}
    <div>foo</div>
  {% endfor %}
</div>

{% for item in items %}
  {% for item2 in items2 %} {% endfor %}
{% endfor %}

{% for item in items %}
  <div>{{ item }}</div>
{% else %}
  {% for item2 in items2 %} {% endfor %}
{% endfor %}

================================================================================
`;
